skw-contract-sdk/skw-contract-sdk/compilation_tests/payable_view.stderr
error: Payable method must be mutable (not view)
  --> compilation_tests/payable_view.rs:12:5
   |
12 |     #[payable]
   |     ^^^^^^^^^^
